tests/paczka1/small_fuzzy/18909785.err
Error in line 4: MB7UJ8 S367 99,2
Error in line 9: A950 S367 5,89
